# vetenarian_bill_ui

./: pyproject.toml
tools/: GOT_Parser.py  GUI_Tkinter_2.0.py  Patient.py
